2008-01-22  Zoltan Varga  <vargaz@gmail.com>

	* object-internals.h (MonoReflectionGenericClass): Make the 'generic_type' field
	a MonoReflectionTypeBuilder since it is always of that type.

	* reflection.c (mono_type_get_object): Remove an unneccesary check.	

	* reflection.c (mono_generic_class_get_object): Simplify this a bit.

	* reflection.c (mono_reflection_bind_generic_parameters): Ditto.
	
	* icall.c (ves_icall_MonoGenericClass_GetParentType): Ditto.

	* icall.c (ves_icall_MonoGenericClass_GetInterfaces): Ditto.

	* reflection.c (mono_reflection_create_runtime_class): Remove already created
	instantiations from the type cache.

2008-01-21 Rodrigo Kumpera  <rkumpera@novell.com>

	* verify.c (do_ldstr): fixed token verification. previous code was 100% broken.

	* verify.c (do_unbox_value): push a controled mutability managed pointer.

2008-01-21 Rodrigo Kumpera  <rkumpera@novell.com>

	* verify.c (do_ldstr): added, verifies if the #US token is valid.

	* verify.c (mono_method_verify): removed old TODO

2008-01-21 Rodrigo Kumpera  <rkumpera@novell.com>

	* verify.c (do_newobj): add visibility check.

2008-01-21 Rodrigo Kumpera  <rkumpera@novell.com>

	* verify.c (do_load_function_ptr): add visibility check.

2008-01-21  Massimiliano Mantione  <massi@ximian.com>
	*class.c:
	mono_generic_class_get_class: hook profiler events.
	mono_field_get_offset: added to support heap-shot in the new profiler.
	*class.h: exported mono_field_get_offset.
	* reflection.c:
	mono_reflection_setup_internal_class: hook profiler events.

2008-01-20  Zoltan Varga  <vargaz@gmail.com>

	* marshal.c (mono_marshal_emit_native_wrapper): Add a 'check_exceptions' 
	argument here too and use it to avoid checking for pending exceptions if 
	possible.

2008-01-20  Gert Driesen  <drieseng@users.sourceforge.net>

	* assembly.c (build_assembly_name): add arg for passing the assembly
	flags. Do not consider a PublicKey with value "null" valid.