@@ -6184,7 +6184,7 @@ ves_icall_System_Environment_Exit (int result)
 {
 	MONO_ARCH_SAVE_REGS;
 
-	if (!mono_threads_set_shutting_down (TRUE))
+	if (!mono_threads_set_shutting_down ())
 		return;
 
 	mono_runtime_set_shutting_down ();
