@@ -143,7 +143,7 @@ gboolean mono_thread_test_state (MonoThread *thread, MonoThreadState test) MONO_
 void mono_thread_init_apartment_state (void) MONO_INTERNAL;
 void mono_thread_cleanup_apartment_state (void) MONO_INTERNAL;
 
-gboolean mono_threads_set_shutting_down (gboolean may_abort) MONO_INTERNAL;
+gboolean mono_threads_set_shutting_down (void) MONO_INTERNAL;
 gboolean mono_threads_is_shutting_down (void) MONO_INTERNAL;
 
 MonoException* mono_thread_get_undeniable_exception (void);
